monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0277/A0277a.mc4
/* (c) https://github.com/MontiCore/monticore */
package  de.monticore.grammar.cocos.invalid.A0277;

component grammar A0277a{


    abstract A;

}
